<resources>
    <string name="app_name">Passecure</string>
    4
    <string name="string_password">Password</string>
    <string name="string_description">Description</string>
    <string name="string_username">Username</string>
    <string name="string_name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="accept">Accept</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="generate_pass">Generate Unique Password</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="biometricTitle">Biometric login for Passecure</string>
    <string name="biometricSubtitle">Login using your biometric credential</string>
    <string name="themeSelectTitle">Select Theme</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">Theme</string>
    <string name="user_auth_failed">Authentication failed, try in 60 seconds.</string>
    <string name="user_auth_failed_meme">These Are Not the Droids You Are Looking For</string>
    <string name="update">Update</string>
    <string name="generateBtn_rename_on_existing_item">Re-generate unique password</string>
</resources>